tweak display of tables

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@
   width: 98px!important;
   min-width: 98px!important;
 }
-.zero_bucket {
+.data_heat_6 {
   background-color: #436ea4;
   color: white;
   border-right-color: #436ea4!important;
